AKU-436: Notifications scroll off screen - Update following code review, also spotted and fixed bug in notification positioning

--- a/aikau/src/main/resources/alfresco/notifications/css/AlfNotification.css
+++ b/aikau/src/main/resources/alfresco/notifications/css/AlfNotification.css
@@ -4,22 +4,20 @@
    opacity: 0;
    position: fixed;
    right: 0;
-   top: 52.5%;
+   top: 22.5%;
    transition: all .2s ease-out;
    z-index: 9999; /* This isn't ideal, but searching all z-indexes is even worse (better solution possible?) */
    &__container {
-      background: #666;
-      border-radius: 0 0 5px 5px;
+      background: @notification-background;
+      border-radius: @notification-border-radius;
       box-shadow: @standard-box-shadow;
       box-sizing: border-box;
       margin: 0 auto;
       padding: 20px 30px 20px 20px;
-      position: relative;
-      top: -50%;
-      width: 400px;
+      width: @notification-width;
    }
    &__close {
-      color: #aaa;
+      color: @notification-foreground-dimmed;
       cursor: pointer;
       font-size: 25px;
       position: absolute;
@@ -27,17 +25,17 @@
       top: 0;
       transition: all .1s ease-out;
       &:hover {
-         color: #fff;
+         color: @notification-foreground;
       }
    }
    &__message {
-      color: #fff;
+      color: @notification-foreground;
       font-family: @standard-font;
       font-size: @normal-font-size;
       line-height: ceil(@normal-font-size/@standard-line-height) * @standard-line-height;
    }
    &--visible {
       opacity: 1;
-      top: 50%;
+      top: 20%;
    }
 }
